--- a/app/styles/elements/_header-logo.scss
+++ b/app/styles/elements/_header-logo.scss
@@ -3,9 +3,15 @@
 .fifthweek-logo{
   font-family:'Oleo Script', cursive;
 }
-.navbar-default .header-logo {
+.navbar-default .fifthweek-logo {
   font-size:32px;
   color:$brand-primary;
+  padding:3px 15px;
+  height:auto;
+  line-height:initial;
+  @media (min-width:992px) {
+    display:none;
+  }
 
   &:hover,
   &:focus {
